--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,12 @@
 # Site settings
 title: Theodore S. Lindsey
 email: theodore@theodorelindsey.com
+baseurl: "" # the subpath of your site, e.g. /blog/
+# for rss, etc
+name: Theodore S. Lindsey
+url: "http://theodorelindsey.com" # the base hostname & protocol for your site
 description: > # this means to ignore newlines until "baseurl:"
   Personal and professional website for Theodore S. Lindsey.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://theodorelindsey.com" # the base hostname & protocol for your site
 
 # usernames
 username_twitter: RagingRoosevelt
