--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Theodore S. Lindsey
-email: theodore@theodorelindsey.com
+email: theodore@theodorelindsey.io
 baseurl: "" # the subpath of your site, e.g. /blog/
 # for rss, etc
 name: Theodore S. Lindsey
-url: "http://theodorelindsey.com" # the base hostname & protocol for your site
+url: "http://theodorelindsey.io" # the base hostname & protocol for your site
 description: > # this means to ignore newlines until "baseurl:"
   Personal and professional website for Theodore S. Lindsey.
 
@@ -18,6 +18,7 @@ username_facebook: theodore.lindsey
 
 # Build settings
 markdown: kramdown
+pygments: true
 
 timezone: America/Chicago
 
