updated office hours

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ username_facebook: theodore.lindsey
 phone: "(503) 898-0184"
 email: theodore@theodorelindsey.io
 office: Eaton 2029
-hours: "M 11:30am - 15:30pm, or by appointment"
+hours: "T 12:30pm - 14:15pm, W 9:00am - 9:50am, W 11:00am - 11:50am, or by appointment"
 
 # Build settings
 markdown: kramdown
