--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ username_facebook: theodore.lindsey
 phone: "(503) 898-0184"
 email: theodore@theodorelindsey.io
 office: Eaton 2029
-hours: "T 12:30pm - 14:15pm, W 9:00am - 9:50am, W 11:00am - 11:50am, or by appointment"
+hours: "<ul style=\"padding: 0px; margin: 0px; margin-top: 1em\"><li>T 12:30pm - 14:15pm</li><li>W 9:00am - 9:50am</li><li>W 11:00am - 11:50am</li><li>by appointment</li></ul>"
 
 # Build settings
 markdown: kramdown
