--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ username_facebook: theodore.lindsey
 
 # contact info
 phone: "(503) 898-0184"
-email: theodore@theodorelindsey.io
+email: tlindsey@ku.edu
 office: Eaton 2029
 hours: "<ul style=\"padding: 0px; margin: 0px; margin-top: 1em\"><li>T 12:30pm - 14:15pm</li><li>W 9:00am - 9:50am</li><li>W 11:00am - 11:50am</li><li>by appointment</li></ul>"
 
