updated contact info

--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ username_facebook: theodore.lindsey
 
 # contact info
 phone: "(503) 898-0184"
-email: tlindsey@ku.edu
-office: Eaton 2029
+email: theodore.lindsey@gmail.com
+office: Montgomery Park, Portland
 
 timezone: America/Chicago
 
