updated contact info

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ username_facebook: theodore.lindsey
 phone: "(503) 898-0184"
 email: theodore.lindsey@gmail.com
 office: Montgomery Park, Portland
+office_link: "https://www.google.com/maps/place/2701 NW Vaughn St, Portland, OR 97210"
 
 timezone: America/Chicago
 
