--- a/_config.yml
+++ b/_config.yml
@@ -29,4 +29,7 @@ paginate: 5
 paginate_path: "/blog/page:num/"
 excerpt_separator: <!--more-->
 
-plugins: [jekyll-paginate]
+plugins: 
+- jekyll-paginate
+- jekyll-sitemap
+- jekyll-seo-tag
