--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   jekyll:
     volumes:
         - './:/srv/jekyll'
+        - /srv/jekyll/_site
     ports:
         - '4000:4000'
         - '35729:35729'
     image: jekyll/jekyll
     command: jekyll serve --incremental --livereload --force_polling
-    
