--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,6 @@
     },
     "files.trimTrailingWhitespace": true,
     "editor.renderWhitespace": "all",
+    "workbench.editor.untitled.hint": "text",
 
 }
