--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
         - '4000:4000'
         - '35729:35729'
     image: jekyll/jekyll
-    command: jekyll serve --incremental --livereload --force_polling
+    command: jekyll serve --incremental --livereload --force_polling --future --unpublished --drafts
