--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ name: Theodore S. Lindsey
 url: "http://theodorelindsey.io" # the base hostname & protocol for your site
 description: > # this means to ignore newlines until "baseurl:"
   Personal and professional website for Theodore S. Lindsey.
+repository: RagingRoosevelt/RagingRoosevelt.github.io
 
 # usernames
 username_twitter: RagingRoosevelt
